--- a/demo2/src/main/resources/application-dev.yml
+++ b/demo2/src/main/resources/application-dev.yml
@@ -14,6 +14,10 @@ spring:
         password: root123
         type: com.alibaba.druid.pool.DruidDataSource
 
+my-profile:
+    name: luke
+    age: 100
+
 aliyun:
     xxxx: xxxx123
     yyyy: yyyy
@@ -28,3 +32,8 @@ mybatis:
     # 指定驼峰映射
     configuration:
         map-underscore-to-camel-case: true
+
+# 查看sql语句
+logging:
+    level:
+        com.example.demo.mapper: DEBUG
