--- a/springclouddemo/cloud-consumer-order80/pom.xml
+++ b/springclouddemo/cloud-consumer-order80/pom.xml
@@ -13,6 +13,16 @@
 
 <dependencies>
     <dependency>
+        <groupId>org.springframework.cloud</groupId>
+        <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
+        <exclusions>
+            <exclusion>
+                <groupId>com.fasterxml.jackson.dataformat</groupId>
+                <artifactId>jackson-dataformat-xml</artifactId>
+            </exclusion>
+        </exclusions>
+    </dependency>
+    <dependency>
         <groupId>me.lukegs7.springcloud</groupId>
         <artifactId>cloud-api-commons</artifactId>
         <version>${project.version}</version>
