--- a/springclouddemo/cloud-config-client-3355/src/main/resources/bootstrap.yml
+++ b/springclouddemo/cloud-config-client-3355/src/main/resources/bootstrap.yml
@@ -24,3 +24,10 @@ eureka:
       #defaultZone: http://eureka7001.com:7001/eureka,http://eureka7002.com:7002/eureka
   instance:
     hostname: cloud-config-center
+
+# 暴露监控端点
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
