--- a/springclouddemo/cloud-config-client-3355/src/main/resources/bootstrap.yml
+++ b/springclouddemo/cloud-config-client-3355/src/main/resources/bootstrap.yml
@@ -10,6 +10,12 @@ spring:
       name: config # 配置文件名
       profile: dev  # 读取后缀名， 上述三个综合：master分支上的config-dev.yml的配置文件被读取http://config-3344.config/master/config-dev.yml
       uri: http://localhost:3344 # 配置中心地址
+  # rabbitmq的相关配置
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: guest
+    password: guest
 
 eureka:
   client:
