--- a/springclouddemo/cloudalibaba-config-nacos-client3377/src/main/resources/bootstrap.yml
+++ b/springclouddemo/cloudalibaba-config-nacos-client3377/src/main/resources/bootstrap.yml
@@ -12,6 +12,8 @@ spring:
       config:
         server-addr: localhost:8848 # Nacos作为配置中心地址
         file-extension: yaml  # 指定为yaml格式的配置，也可以是properties，对应的配置也要是properties格式
+        group: TEST_GROUP
+        namespace: ef6e6cfb-6153-46d3-838d-5ea241343189
 
 # ${spring.application.name}-${spring.profile.active}.${spring.cloud.nacos.config.file-extension}
 # == nacos-config-client-dev.yaml
