--- a/securitydemo/src/main/resources/application.yml
+++ b/securitydemo/src/main/resources/application.yml
@@ -1,2 +1,14 @@
 server:
   port: 8111
+
+
+#spring:
+#  security:
+#    user:
+#      name: admin
+spring:
+  datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/demo?serverTimezone=GMT%2B8
+    username: root
+    password: root123
