feat: spring security

--- a/securitydemo/src/main/resources/application.yml
+++ b/securitydemo/src/main/resources/application.yml
@@ -9,6 +9,6 @@ server:
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/demo?serverTimezone=GMT%2B8
+    url: jdbc:mysql://localhost:3306/demo?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=utf8
     username: root
     password: root123
