--- a/springsecurity/service/service_acl/pom.xml
+++ b/springsecurity/service/service_acl/pom.xml
@@ -3,14 +3,14 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>acl_parent</artifactId>
+        <artifactId>service</artifactId>
         <groupId>me.lukegs7</groupId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>service_acl</artifactId>
-    
+
     <dependencies>
         <dependency>
             <groupId>me.lukegs7</groupId>
